source/blender/draw/intern/draw_curves.cc
@@ -15,6 +15,7 @@
 
 #include "BKE_attribute.hh"
 #include "BKE_curves.hh"
+#include "BKE_customdata.hh"
 
 #include "GPU_batch.hh"
 #include "GPU_capabilities.hh"
@@ -235,6 +236,7 @@ DRWShadingGroup *DRW_shgroup_curves_create_sub(Object *object,
   DRW_shgroup_buffer_texture(shgrp, "au", g_dummy_vbo);
   DRW_shgroup_buffer_texture(shgrp, "c", g_dummy_vbo);
   DRW_shgroup_buffer_texture(shgrp, "ac", g_dummy_vbo);
+  DRW_shgroup_buffer_texture(shgrp, "a", g_dummy_vbo);
 
   /* TODO: Generalize radius implementation for curves data type. */
   float hair_rad_shape = 0.0f;
@@ -265,10 +267,20 @@ DRWShadingGroup *DRW_shgroup_curves_create_sub(Object *object,
     DRW_shgroup_buffer_texture(shgrp, "hairLen", curves_cache->proc_length_buf);
   }
 
+  int curve_data_render_uv = 0;
+  int point_data_render_uv = 0;
+  if (CustomData_has_layer(&curves_id.geometry.curve_data, CD_PROP_FLOAT2)) {
+    curve_data_render_uv = CustomData_get_render_layer(&curves_id.geometry.curve_data,
+                                                       CD_PROP_FLOAT2);
+  }
+  if (CustomData_has_layer(&curves_id.geometry.point_data, CD_PROP_FLOAT2)) {
+    point_data_render_uv = CustomData_get_render_layer(&curves_id.geometry.point_data,
+                                                       CD_PROP_FLOAT2);
+  }
+
   const DRW_Attributes &attrs = curves_cache->final.attr_used;
   for (int i = 0; i < attrs.num_requests; i++) {
     const DRW_AttributeRequest &request = attrs.requests[i];
-
     char sampler_name[32];
     drw_curves_get_attribute_sampler_name(request.attribute_name, sampler_name);
 
@@ -276,14 +288,19 @@ DRWShadingGroup *DRW_shgroup_curves_create_sub(Object *object,
       if (!curves_cache->proc_attributes_buf[i]) {
         continue;
       }
-
       DRW_shgroup_buffer_texture(shgrp, sampler_name, curves_cache->proc_attributes_buf[i]);
+      if (request.cd_type == CD_PROP_FLOAT2 && request.layer_index == curve_data_render_uv) {
+        DRW_shgroup_buffer_texture(shgrp, "a", curves_cache->proc_attributes_buf[i]);
+      }
     }
     else {
       if (!curves_cache->final.attributes_buf[i]) {
         continue;
       }
       DRW_shgroup_buffer_texture(shgrp, sampler_name, curves_cache->final.attributes_buf[i]);
+      if (request.cd_type == CD_PROP_FLOAT2 && request.layer_index == point_data_render_uv) {
+        DRW_shgroup_buffer_texture(shgrp, "a", curves_cache->final.attributes_buf[i]);
+      }
     }
 
     /* Some attributes may not be used in the shader anymore and were not garbage collected yet, so
@@ -462,6 +479,7 @@ gpu::Batch *curves_sub_pass_setup_implementation(PassT &sub_ps,
   sub_ps.bind_texture("au", g_dummy_vbo);
   sub_ps.bind_texture("c", g_dummy_vbo);
   sub_ps.bind_texture("ac", g_dummy_vbo);
+  sub_ps.bind_texture("a", g_dummy_vbo);
 
   /* TODO: Generalize radius implementation for curves data type. */
   float hair_rad_shape = 0.0f;
@@ -492,10 +510,20 @@ gpu::Batch *curves_sub_pass_setup_implementation(PassT &sub_ps,
     sub_ps.bind_texture("hairLen", curves_cache->proc_length_buf);
   }
 
+  int curve_data_render_uv = 0;
+  int point_data_render_uv = 0;
+  if (CustomData_has_layer(&curves_id.geometry.curve_data, CD_PROP_FLOAT2)) {
+    curve_data_render_uv = CustomData_get_render_layer(&curves_id.geometry.curve_data,
+                                                       CD_PROP_FLOAT2);
+  }
+  if (CustomData_has_layer(&curves_id.geometry.point_data, CD_PROP_FLOAT2)) {
+    point_data_render_uv = CustomData_get_render_layer(&curves_id.geometry.point_data,
+                                                       CD_PROP_FLOAT2);
+  }
+
   const DRW_Attributes &attrs = curves_cache->final.attr_used;
   for (int i = 0; i < attrs.num_requests; i++) {
     const DRW_AttributeRequest &request = attrs.requests[i];
-
     char sampler_name[32];
     drw_curves_get_attribute_sampler_name(request.attribute_name, sampler_name);
 
@@ -504,12 +532,18 @@ gpu::Batch *curves_sub_pass_setup_implementation(PassT &sub_ps,
         continue;
       }
       sub_ps.bind_texture(sampler_name, curves_cache->proc_attributes_buf[i]);
+      if (request.cd_type == CD_PROP_FLOAT2 && request.layer_index == curve_data_render_uv) {
+        sub_ps.bind_texture("a", curves_cache->proc_attributes_buf[i]);
+      }
     }
     else {
       if (!curves_cache->final.attributes_buf[i]) {
         continue;
       }
       sub_ps.bind_texture(sampler_name, curves_cache->final.attributes_buf[i]);
+      if (request.cd_type == CD_PROP_FLOAT2 && request.layer_index == point_data_render_uv) {
+        sub_ps.bind_texture("a", curves_cache->final.attributes_buf[i]);
+      }
     }
 
     /* Some attributes may not be used in the shader anymore and were not garbage collected yet, so
